Fix for help icon not showing in mobile

--- a/aegon-sass-library/widgets/_lhfs.scss
+++ b/aegon-sass-library/widgets/_lhfs.scss
@@ -104,9 +104,7 @@
       &.help {
         margin-left: 10px;
         padding: 0;
-        @media screen and(max-width: $rc-s-max-width) {
-          display: none;
-        }
+
         &:before {
           line-height: $elements_height;
 
